Fix tabbing and spacing on CSS pages

--- a/Loann-Shane/layout.css
+++ b/Loann-Shane/layout.css
@@ -9,29 +9,30 @@
 
 .col {
   display: block;
-  float:left;
+  float: left;
   margin: 1% 0 1% 1.6%;
 }
-.col:first-child { margin-left: 0; }
+.col:first-child {
+  margin-left: 0;
+}
 
 /*  GROUPING  */
 
 .group:before,
 .group:after {
-  content:"";
-  display:table;
+  content: "";
+  display: table;
 }
 .group:after {
-  clear:both;
+  clear: both;
 }
 .group {
-    zoom:1; /* For IE 6/7 */
+    zoom: 1; /* For IE 6/7 */
 }
 
 /*  GRID OF FIVE  */
 .span_3_of_5 {
   width: 58%;
-  /*display: inline-block;*/
 }
 .span_2_of_5 {
   width: 39.04%;
